--- a/src/main/webapp/app/dashboard.css
+++ b/src/main/webapp/app/dashboard.css
@@ -5,6 +5,23 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.form-control,
+.form-control:focus{
+	border: 1;
+	border-color: #adb5bd;
+	webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+a:link,
+a:visited,
+a:hover,
+a:active { 
+	text-decoration: none; 
+}
+
+
+
 nav{
 	padding: 0 0 0 5px;
 	/*background-image: linear-gradient(to right, #212529, #212529, #212529, #343a40, #212529, #212529);*/
