Adjusted the layout of flow settings

--- a/src/main/webapp/app/dashboard.css
+++ b/src/main/webapp/app/dashboard.css
@@ -5,6 +5,12 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn.active.focus 
 .form-control,
 .form-control:focus{
 	border: 1;
@@ -20,6 +26,19 @@ a:active {
 	text-decoration: none; 
 }
 
+.sidepad {
+  position: fixed;
+  top: 0;
+  /* rtl:raw:
+  right: 0;
+  */
+  bottom: 0;
+  /* rtl:remove */
+  left: 0;
+  z-index: 100; /* Behind the navbar */
+  padding: 8px 0 0 0; /* Height of navbar */
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
 
 
 nav{
