--- a/src/main/webapp/app/dashboard.css
+++ b/src/main/webapp/app/dashboard.css
@@ -27,14 +27,20 @@ a:active {
 }
 
 .side-panel{
-	display: none;
-	position: absolute;
-  bottom: 0;
-  right: 0;
-  height: calc(100vh - 45px);
-  width: 420px;
-  margin: 0 1px;
-  /*z-index: 2100;*/
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    border-bottom: 5px solid;
+    border-right: 5px solid;
+    border-left: calc(100vw - 450px) solid;
+    border-top: 45px solid;
+    z-index: 2;
+    border-color: rgba(111,111,111,0.5);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
 }
 
 .side-panel .customized-card-body{
