--- a/src/main/webapp/app/dashboard.css
+++ b/src/main/webapp/app/dashboard.css
@@ -341,3 +341,21 @@ nav a{
     pointer-events: none;
     color: #aaa;
 }
+
+
+.spinner-container{
+    visibility: hidden;
+    width:100vw;
+    height:100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.5);
+    z-index: 10000;
+}
+
+#full-spinner{
+    position:absolute;
+    top: 50%;
+    left: 50%;
+}
